Adaptation to static web hosted in storage acc

--- a/ga.html
+++ b/ga.html
@@ -60,6 +60,6 @@
         <footer>
             <p style="text-align: center">Made with love by Bergrahm</p>
         </footer>
-        <script id="GAS" src="C:/Users/MarkB/Documents/GitHub/ga/lib/app.js"></script>
+        <script id="GAS" src="app.js"></script>
     </body>
 </html>
