Added PONG GAME
Today I had a very good day. I also programed a little. Now i add pong game to page :)

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <p>Explore</p>
         <ul>
             <li><a href="ga.html">GA</a></li>
-            <li>some other page</li>
+            <li><a href="pong.html">PONG GAME</a></li>
         </ul>        
     </div>
     <footer>Made by Bergrahm</footer>
