--- a/old/public/home.html
+++ b/old/public/home.html
@@ -33,8 +33,8 @@
         <h3>Contact Information:</h3>
         <nav class="footer-nav nav">
             <ul>
-                <li>Email:<img src="Images/email-logo.jpg"></li>
-                <li>Instagram:<a href="https://www.instagram.com/erikbergrahm/"><img src="Images/instagram.png"></a></li>
+                <li>Email:<img src="images/email-logo.jpg"></li>
+                <li>Instagram:<a href="https://www.instagram.com/erikbergrahm/"><img src="images/instagram.png"></a></li>
             </ul>
         </nav>
     </footer>
